--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,7 @@ ul {
 
 /* nav start */
 .navigation {
+    background-color: #dbac34;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -30,7 +31,7 @@ ul {
 /* (A) WRAPPER */
 #hamnav {
   width: 100%;
-  background: #000;
+  background: #dbac34;
   color: white;
   text-decoration: none;
 }
@@ -125,7 +126,7 @@ ul {
 .footer-div {
 }
 .footer {
-  background-color: #24262b;
+  background-color: #0f0f0f;
   padding: 50px 0;
 }
 .footer-col {
@@ -149,7 +150,7 @@ p {
   position: absolute;
   left: 0;
   bottom: -10px;
-  background-color: #e91e63;
+  background-color: #EDA800;
   height: 2px;
   box-sizing: border-box;
   width: 50px;
